--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,28 @@
-<div *ngFor="let employeeObject of employees"
->
-  <h1>{{employeeObject.type}}</h1>
-  <table>
-    <thead>
-    <tr>
-      <th>Անուն</th>
-      <th>Բացակա օրերի քանակ</th>
-      <th>Մաքուր Աշխատավարձ</th>
-      <th>Հարկ</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let empl of employeeObject.employees">
-      <th>{{empl.name}}</th>
-      <th>{{empl.sickDays}}</th>
-      <th>{{empl.amount}}</th>
-      <th>{{empl.totalTax}}</th>
-    </tr>
-    </tbody>
-  </table>
+<div>
+  <button mat-button [disabled]="!!employees.length" (click)="getData()">Բեռնել</button>
+  <button mat-button [disabled]="!employees.length" (click)="newData()">Վերահաշվարկ</button>
 </div>
+<ng-container *ngIf="employees.length">
+  <div *ngFor="let employeeObject of employees"
+  >
+    <h1>{{employeeObject.type}}</h1>
+    <table>
+      <thead>
+      <tr>
+        <th>Անուն</th>
+        <th>Բացակա օրերի քանակ</th>
+        <th>Մաքուր Աշխատավարձ</th>
+        <th>Հարկ</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let empl of employeeObject.employees">
+        <th>{{empl.name}}</th>
+        <th>{{empl.sickDays}}</th>
+        <th>{{empl.amount}}</th>
+        <th>{{empl.totalTax}}</th>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</ng-container>
